--- a/css/styles.css
+++ b/css/styles.css
@@ -141,10 +141,50 @@ a {
   box-sizing: border-box;
 }
 
+header {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  background-color: gray;
+  margin-bottom: 100px;
+}
+header nav {
+  width: 500px;
+}
+header nav ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+header .burger-icon {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  display: none;
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+}
+header .burger-icon span {
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: black;
+  border-radius: 5px;
+}
+
 main {
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   width: 1200px;
@@ -187,4 +227,57 @@ main .widget .description p {
   font-size: 10px;
   width: 240px;
   line-height: 22px;
+}
+
+@media (max-width: 480px) {
+  header {
+    padding: 10px 25px;
+    justify-content: space-between;
+  }
+}
+@media (max-width: 600px) {
+  header nav {
+    width: 400px;
+  }
+}
+@media (max-width: 480px) {
+  header nav {
+    display: none;
+  }
+}
+@media (max-width: 480px) {
+  header .burger-icon {
+    display: flex;
+  }
+}
+
+@media (max-width: 1200px) {
+  main {
+    width: 100%;
+    padding: 0 100px;
+    justify-content: space-around;
+    gap: 50px;
+  }
+}
+@media (max-width: 1000px) {
+  main {
+    padding: 0;
+  }
+}
+@media (max-width: 768px) {
+  main .widget {
+    width: 80%;
+  }
+}
+@media (max-width: 768px) {
+  main .widget .bg-image {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+}
+@media (max-width: 400px) {
+  main .widget .description p {
+    width: 80%;
+  }
 }/*# sourceMappingURL=styles.css.map */
