--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin go-flex($dir: row, $justify: center, $align: center, $wrap: nowrap) {
+@mixin go-flex($dir: row, $wrap: nowrap, $justify: center, $align: center) {
   display: flex;
   flex-direction: $dir;
   flex-wrap: $wrap;
